Add schools models, crud api base, & hooks base init

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,12 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
+    "strictPropertyInitialization": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
@@ -21,6 +24,6 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src/*"
+    "src/**/*"
   ]
 }
