--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "web-vitals": "^2.1.4",
