--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/uuid": "^9.0.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.4"
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
