--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/uuid": "^9.0.0",
+    "@types/wicg-file-system-access": "^2020.9.5",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.9.4"
