--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@mui/x-data-grid": "^5.17.24",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "csvtojson": "^2.0.10",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
