--- a/package.json
+++ b/package.json
@@ -62,17 +62,27 @@
     "parserOptions": {
       "ecmaVersion": "latest",
       "sourceType": "module",
-      "project": ["./tsconfig.json"]
+      "project": [
+        "./tsconfig.json"
+      ]
     },
     "rules": {
       "indent": [
         "error",
         2
       ],
-      "@typescript-eslint/explicit-function-return-type": ["off"],
-      "@typescript-eslint/no-misused-promises": ["off"],
-      "@typescript-eslint/strict-boolean-expressions": ["off"],
-      "@typescript-eslint/consistent-type-definitions": ["off"]
+      "@typescript-eslint/explicit-function-return-type": [
+        "off"
+      ],
+      "@typescript-eslint/no-misused-promises": [
+        "off"
+      ],
+      "@typescript-eslint/strict-boolean-expressions": [
+        "off"
+      ],
+      "@typescript-eslint/consistent-type-definitions": [
+        "off"
+      ]
     }
   },
   "browserslist": {
