--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "@mui/x-data-grid": "^5.17.24",
+    "@types/qrcode": "^1.5.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csvtojson": "^2.0.10",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
